Add user method moved to Login controller and doesn't need authentication
